# service-concierge

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: appointments.json  orders.json  policies.json  products.json  users.json
docs/: MOCK_APIS.md
examples/: README.md  demo_apis.py  demo_streamlit.py  demo_tool_definitions.py  demo_understanding_tools.py  streamlit_demo.py
prompts/: agent_prompt.j2
src/concierge/: __init__.py  app.py  guardrails.py  paths.py  settings.py
src/concierge/agent/: guardrails.py  main.py  understanding.py
src/concierge/datatypes/: chat_types.py  general_types.py  metrics_types.py
src/concierge/external_systems/: __init__.py  appointments.py  inventory.py  orders.py  users.py
src/concierge/memory/: internal.py
src/concierge/tools/: __init__.py  definitions.py  utils.py
tests/: test_appointments_api.py  test_concierge.py  test_guardrails.py  test_knowledge_api.py  test_mock_apis.py  test_orders_api.py  test_tool_definitions.py  test_users_api.py
